tdf#130785 Hide Insert Formula in online sidebar

Change-Id: Ifaf3fe2b7abc463ab35a6924d0d8535631cf490b